--- a/snappy/Gemfile
+++ b/snappy/Gemfile
@@ -53,6 +53,8 @@ gem 'vimeo'
 
 gem 'httparty'
 
+gem 'bootstrap-sass', '3.2.0.2'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
