--- a/snappy/.env
+++ b/snappy/.env
@@ -1,8 +1,1 @@
-GITHUB_CLIENT_ID:     "28db80aee6766cc4d0a9"
-GITHUB_CLIENT_SECRET: "c974a4fd8cb1b9aecef9d970c7d3d1a2704ae817"
-
-TWITTER_KEY:          "lbRKQs5245UEMqHgU5dJsWAON"
-TWITTER_SECRET:       "4Gcc0snMOBO2Ti1i6WhnUdmnIF7NHsjKY1PAE1bQpIm7eB3ym8"
-
-VIMEO_CLIENT_ID:      "fd6db20954e983b91f9315079c31615f9135d4a2"
-VIMEO_CLIENT_SECRET:  "ff11285a3c5431e10e1a5ce72b05337ee6309c4b"
+reminder: old keys are gone!
