--- a/snappy/.env
+++ b/snappy/.env
@@ -1,5 +1,10 @@
+
+
+
 GITHUB_CLIENT_ID:     "28db80aee6766cc4d0a9"
 GITHUB_CLIENT_SECRET: "c974a4fd8cb1b9aecef9d970c7d3d1a2704ae817"
 
 TWITTER_KEY:          "lbRKQs5245UEMqHgU5dJsWAON"
 TWITTER_SECRET:       "4Gcc0snMOBO2Ti1i6WhnUdmnIF7NHsjKY1PAE1bQpIm7eB3ym8"
+TWITTER_ACCESS: "2178516168-A1zSvMjkU88d0l9nBmDfdKeoj09FvA6XTuYaXvu"
+TWITTER_ACCESS_SECRET: "e1wZf94WNBLLtTNLLLFopDm6ow3ekvwpg7b9iJ0Zx9Vmu"
